docs: 全屏截图（首页）+ 全新 README（功能/架构/引用项目致谢/免责声明）；web: 双击暂停、按钮焦点清理、网盘Key与换集修复（v1.0.38）